# Upbit-Quant

./: .pre-commit-config.yaml  BBCFinancialCrawler.ipynb  BBCnews_autoCrawler.ipynb  CONTRIBUTING.md  Dockerfile  KRWBTC_crawler.ipynb  KRWETH_crawler.ipynb  README.md  RLHFplayground.py.  RealtimeFinancehtml.html  WebUI2.html  config.env.example  docker-compose.yml  krw_btc_candlesticks.csv  pyproject.toml  pytest.ini  requirements.txt  tester1main.py  upbit_data_generator.py  visualization_of_fear_&_greed_Index.ipynb  visualization_of_fear_n_greed_Index.ipynb  visualization_ratio_of_trading.ipynb  webUI.html  websearcher1  websearcher1.py
.github/workflows/: ci.yml  docker.yml
Crawler/: NaverFinancialCrawler.ipynb
GUI/: index.html
GUI/PythonUI/: visualization_of_fear_&_greed_index.py
GUI/Visualization/: CoinNet.py
RLtest/: RLHFplayground.py  RLsample.py
RLtest/GeneticAlgorithmCompetition/: geneticquantplayground.py
Reinforcement Learning/: RLHFplayground.py
Reinforcement Learning/GeneticAlgorithmCompetition/: geneticquantplayground.py
Reinforcement Learning/main/: DataFramgeGenerator.py  TradingEnvironment.py
Ticker/: Trader1.py
UpbitQuant2/: main.py
main/: Backtesting.py  CoinNet.py  Evaluation.py  MLquantTest1.py  README.md  Run_simulation.py  Ticker.py  TradingDome.py  TradingEnvironment.py  main.py  readme.md  stepts.yaml
tests/: __init__.py  conftest.py
tests/test_core/: test_config.py  test_exceptions.py
tests/test_utils/: test_helpers.py  test_validation.py
upbit_quant/: __init__.py  cli.py
upbit_quant/core/: __init__.py  config.py  exceptions.py  logger.py
upbit_quant/utils/: __init__.py  decorators.py  helpers.py  validation.py
visualization/: VirtualTrader_version0.ipynb  VirtualTrader_version1.py  import requests.py  linearpredictivemodel copy.py  linearpredictivemodel.py  visualization_of_fear_&_greed_index.py
visualization/web/: QuantStreamlit.py
web/: QuantStreamlit.py
